Error with incomplete json get_wrap_info. Fix amount field

--- a/html_source/src/assets/scss/components/_forms.scss
+++ b/html_source/src/assets/scss/components/_forms.scss
@@ -3,6 +3,10 @@
     width: 100%;
     border-radius: 0.8rem;
 
+    .error {
+        color: var(--red-500);
+    }
+
     &__card {
         display: flex;
         flex-direction: column;
